Fixed layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 
 #main {
     display: grid;
-    align-items: center;
     gap:1rem;
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: 
